# strokestyles_interactive_demos

./: .gitignore  README.md
strokestyles_testbed/: CMakeLists.txt  README.md  launch.json
strokestyles_testbed/src/: brush_helper.h  common.cpp  common.h  main.cpp
strokestyles_testbed/src/colormotor/: README.md  cm.h  cm_app.h  cm_gfx.cpp  cm_gfx.h  cm_math.h  cm_utils.cpp  cm_utils.h  colormotor.h
strokestyles_testbed/src/colormotor/app/: cm_imgui_app.cpp  cm_imgui_app.h  gfx_ui.cpp  gfx_ui.h
strokestyles_testbed/src/colormotor/platform/: cm_utils_linux.cpp  cm_utils_osx.mm
strokestyles_testbed/src/demos/: basic_module.h  clang-format-test  curved_skeletal_test.h  demo.h  font_stylization_base.cpp  font_stylization_base.h  font_stylization_graffiti.h  font_stylization_particle.h  font_stylization_similarity.h  font_stylization_stroke.h  include_modules.h  instantiate_modules.incl  interactive_calligraphy.h  interactive_graff.h  lqt_bezier_demo.h  lqt_semitied_demo.h  sim-old.h
strokestyles_testbed/strokestyles_stestbed/strokestyles_stestbed/: main.cpp
strokestyles_testbed/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
strokestyles_testbed/xcode/strokestyles_testbed.xcodeproj/: project.pbxproj
strokestyles_testbed/xcode/strokestyles_testbed.xcodeproj/project.xcworkspace/xcuserdata/colormotor.xcuserdatad/: UserInterfaceState.xcuserstate
strokestyles_testbed/xcode/strokestyles_testbed.xcodeproj/xcshareddata/xcschemes/: strokestyles_testbed.xcscheme
strokestyles_testbed/xcode/strokestyles_testbed.xcodeproj/xcuserdata/colormotor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
strokestyles_testbed/xcode/strokestyles_testbed.xcodeproj/xcuserdata/colormotor.xcuserdatad/xcschemes/: xcschememanagement.plist
